@@ -1,19 +1,32 @@
+package com.example.demo.service.impl;
+
+import com.example.demo.dto.LeaveRequestDto;
+import com.example.demo.exception.ResourceNotFoundException;
+import com.example.demo.model.EmployeeProfile;
+import com.example.demo.model.LeaveRequest;
+import com.example.demo.repository.EmployeeProfileRepository;
+import com.example.demo.repository.LeaveRequestRepository;
+import com.example.demo.service.LeaveRequestService;
+import org.springframework.stereotype.Service;
+
+import java.time.LocalDate;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 public class LeaveRequestServiceImpl implements LeaveRequestService {
 
     private final LeaveRequestRepository leaveRepo;
     private final EmployeeProfileRepository employeeRepo;
 
-    public LeaveRequestServiceImpl(
-            LeaveRequestRepository leaveRepo,
-            EmployeeProfileRepository employeeRepo) {
+    public LeaveRequestServiceImpl(LeaveRequestRepository leaveRepo,
+                                   EmployeeProfileRepository employeeRepo) {
         this.leaveRepo = leaveRepo;
         this.employeeRepo = employeeRepo;
     }
 
     @Override
     public LeaveRequestDto create(LeaveRequestDto dto) {
-
         EmployeeProfile employee = employeeRepo.findById(dto.getEmployeeId())
                 .orElseThrow(() -> new ResourceNotFoundException("Employee not found"));
 
@@ -22,18 +35,16 @@ public class LeaveRequestServiceImpl implements LeaveRequestService {
         leave.setStartDate(dto.getStartDate());
         leave.setEndDate(dto.getEndDate());
         leave.setType(dto.getType());
-        leave.setReason(dto.getReason());
         leave.setStatus("PENDING");
+        leave.setReason(dto.getReason());
 
-        LeaveRequest saved = leaveRepo.save(leave);
-        return mapToDto(saved);
+        return mapToDto(leaveRepo.save(leave));
     }
 
     @Override
     public LeaveRequestDto approve(Long id) {
         LeaveRequest leave = leaveRepo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Leave not found"));
-
         leave.setStatus("APPROVED");
         return mapToDto(leaveRepo.save(leave));
     }
@@ -42,7 +53,6 @@ public class LeaveRequestServiceImpl implements LeaveRequestService {
     public LeaveRequestDto reject(Long id) {
         LeaveRequest leave = leaveRepo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Leave not found"));
-
         leave.setStatus("REJECTED");
         return mapToDto(leaveRepo.save(leave));
     }
@@ -55,17 +65,19 @@ public class LeaveRequestServiceImpl implements LeaveRequestService {
         return leaveRepo.findByEmployee(employee)
                 .stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<LeaveRequestDto> getOverlappingForTeam(
             String teamName, LocalDate start, LocalDate end) {
 
-        return leaveRepo.findApprovedOverlappingForTeam(teamName, start, end)
+        return leaveRepo
+                .findByEmployee_TeamNameAndStatusAndStartDateLessThanEqualAndEndDateGreaterThanEqual(
+                        teamName, "APPROVED", end, start)
                 .stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private LeaveRequestDto mapToDto(LeaveRequest leave) {
